--- a/FE/src/app/authentication/signin/signin.component.html
+++ b/FE/src/app/authentication/signin/signin.component.html
@@ -4,34 +4,24 @@
       <div class="left-img" style="background-image: url(assets/images/pages/bg-01.png);">
       </div>
     </div>
-    <div class="col-sm-6 auth-form-section">
-      <div class="form-section">
+    <div class="col-sm-6 auth-form-section" >
+      <div class="form-section" >
         <div class="auth-wrapper">
-          <h2 class="welcome-msg"> Welcome to Smart </h2>
-          <p class="auth-signup-text text-muted">Need an account?<a routerLink="/authentication/signup"
-              class="sign-up-link">Sign Up
+          <h2 class="welcome-msg" class="tsleft1">שלום למערכת קריאת שירות</h2>
+          <p class="toleft" class="auth-signup-text text-muted" class="toleft">צריך חשבון?<a routerLink="/authentication/signup"
+              class="sign-up-link">הירשם
             </a></p>
-          <div class="d-flex justify-content-between lbl-alert mb-3">
-            <div>
-              <button mat-raised-button color="primary" type="button" (click)="adminSet();">Admin</button>
-            </div>
-            <div>
-              <button mat-raised-button color="accent" type="button" (click)="teacherSet();">Teacher</button>
-            </div>
-            <div>
-              <button mat-raised-button color="warn" type="button" (click)="studentSet();">Student</button>
-            </div>
-          </div>
-          <h2 class="login-title">Sign in</h2>
-          <form class="validate-form" [formGroup]="authForm" (ngSubmit)="onSubmit()">
+       
+          <h2 class="login-title" class="toleft">להתחבר</h2>
+          <form class="validate-form" [formGroup]="authForm" (ngSubmit)="logIn()">
             <div class="row">
               <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 mb-2">
                 <mat-form-field class="example-full-width" appearance="outline">
-                  <mat-label>Username</mat-label>
-                  <input matInput formControlName="username" />
+                  <mat-label>שם משתמש</mat-label>
+                  <input matInput formControlName="username" [(ngModel)]="loginUser.email" />
                   <mat-icon matSuffix>face</mat-icon>
                   <mat-error *ngIf="authForm.get('username').hasError('required')">
-                    Username is required
+                    יש למלה שם משתמש
                   </mat-error>
                 </mat-form-field>
               </div>
@@ -39,52 +29,37 @@
             <div class="row">
               <div class="col-xl-12col-lg-12 col-md-12 col-sm-12 mb-2">
                 <mat-form-field class="example-full-width" appearance="outline">
-                  <mat-label>Password</mat-label>
-                  <input matInput [type]="hide ? 'password' : 'text'" formControlName="password">
-                  <a class="show-pwd-icon" href="#" onClick="return false;" matSuffix (click)="hide = !hide"
+                  <mat-label>סיסמה</mat-label>
+                  <input matInput [type]="hide ? 'password' : 'text'" formControlName="password" [(ngModel)]="loginUser.password">
+                  <a class="show-pwd-icon" href="#"  matSuffix (click)="hide = !hide"
                     [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
                     <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
                   </a>
                   <mat-error *ngIf="authForm.get('password').hasError('required')">
-                    Password is required
+                    יש למלא הסיסמה
                   </mat-error>
                 </mat-form-field>
               </div>
             </div>
-            <div class="d-flex justify-content-between align-items-center mb-5">
+            <div class="d-flex justify-content-between align-items-center mb-5" class="toleft">
               <div class="form-check">
                 <label class="form-check-label">
-                  <input class="form-check-input" type="checkbox" value=""> Remember me
+                  <input class="form-check-input" type="checkbox" value=""> זכור אותי
                   <span class="form-check-sign">
                     <span class="check"></span>
                   </span>
                 </label>
               </div>
-              <a class="txt1" routerLink="/authentication/forgot-password">Forgot Password?</a>
             </div>
             <div *ngIf="error" class="alert alert-danger mt-3 mb-0">{{error}}</div>
             <div class="container-auth-form-btn">
               <div style="text-align:center">
                 <button mat-raised-button color="primary" [class.auth-spinner]="loading" [disabled]="loading"
-                  class="auth-form-btn" [disabled]="!authForm.valid " type="submit">Login</button>
+                  class="auth-form-btn" [disabled]="!authForm.valid " type="submit">התחברות</button>
               </div>
             </div>
           </form>
-          <h6 class="social-login-title">OR</h6>
-          <ul class="list-unstyled social-icon mb-0 mt-3">
-            <li class="list-inline-item"><a href="javascript:void(0)" class="rounded">
-                <i class="fab fa-google"></i>
-              </a></li>
-            <li class="list-inline-item"><a href="javascript:void(0)" class="rounded flex-c-m">
-                <i class="fab fa-facebook-f"></i>
-              </a></li>
-            <li class="list-inline-item"><a href="javascript:void(0)" class="rounded">
-                <i class="fab fa-twitter"></i>
-              </a></li>
-            <li class="list-inline-item"><a href="javascript:void(0)" class="rounded">
-                <i class="fab fa-linkedin-in"></i>
-              </a></li>
-          </ul>
+       
         </div>
       </div>
     </div>
