--- a/FE/src/app/authentication/signup/signup.component.html
+++ b/FE/src/app/authentication/signup/signup.component.html
@@ -7,87 +7,94 @@
     <div class="col-sm-6 auth-form-section">
       <div class="form-section">
         <div class="auth-wrapper">
-          <h2 class="welcome-msg"> הרשמה </h2>
-          <p class="auth-signup-text text-muted">Enter details to create your account</p>
+          <h2 class="welcome-msg" class="toleft"> הרשמה </h2>
+          <p class="auth-signup-text text-muted" class="toleft">יש למלא כל השדות</p>
           <form class="validate-form" [formGroup]="authForm" (ngSubmit)="onSubmit()">
             <div class="row">
               <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 mb-2">
                 <mat-form-field class="example-full-width" appearance="outline">
-                  <mat-label>Username</mat-label>
-                  <input matInput formControlName="username" required>
+                  <mat-label>שם משתמש</mat-label>
+                  <input matInput formControlName="username" [(ngModel)]="newCustomer.name" required>
                   <mat-icon matSuffix>face</mat-icon>
                   <mat-error *ngIf="authForm.get('username').hasError('required')">
-                    Username is required
+                    יש לרשום את שם משתמש
                   </mat-error>
                 </mat-form-field>
               </div>
             </div>
+
+
             <div class="row">
               <div class="col-xl-12col-lg-12 col-md-12 col-sm-12 mb-2">
                 <mat-form-field class="example-full-width" appearance="outline">
-                  <mat-label>Email</mat-label>
-                  <input matInput formControlName="email" required>
+                  <mat-label>דואר אלקטרוני</mat-label>
+                  <input matInput formControlName="email" [(ngModel)]="newCustomer.email" required>
                   <mat-icon matSuffix>mail</mat-icon>
                   <mat-error *ngIf="authForm.get('email').hasError('required') || authForm.get('email').touched">
-                    Please enter a valid email address
+                    חייב לרשום דואר אלקטרוני
                   </mat-error>
                 </mat-form-field>
               </div>
             </div>
+
             <div class="row">
               <div class="col-xl-12col-lg-12 col-md-12 col-sm-12 mb-2">
                 <mat-form-field class="example-full-width" appearance="outline">
-                  <mat-label>Password</mat-label>
-                  <input matInput formControlName="password" [type]="hide ? 'password' : 'text'" required>
+                  <mat-label>מספר נייד</mat-label>
+                  <input matInput formControlName="phone" [(ngModel)]="newCustomer.phone" required>
+                  <mat-icon matSuffix>
+                    phone
+                  </mat-icon>
+                  <mat-error *ngIf="authForm.get('phone').hasError('required')">
+                יש לרשום את מספר נייד
+                  </mat-error>
+                </mat-form-field>
+              </div>
+            </div>
+
+            <div class="row">
+              <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 mb-2">
+                <mat-form-field class="example-full-width" appearance="outline">
+                  <mat-label>כתובת</mat-label>
+                  <input matInput formControlName="username" [(ngModel)]="newCustomer.address" required>
+                  <mat-icon matSuffix>address</mat-icon>
+                  <mat-error *ngIf="authForm.get('address').hasError('required')">
+                    יש לרשום את מספר כתובת
+                  </mat-error>
+                </mat-form-field>
+              </div>
+            </div>
+
+
+            <div class="row">
+              <div class="col-xl-12col-lg-12 col-md-12 col-sm-12 mb-2">
+                <mat-form-field class="example-full-width" appearance="outline">
+                  <mat-label>סיסמה</mat-label>
+                  <input matInput formControlName="password" [(ngModel)]="newCustomer.password" [type]="hide ? 'password' : 'text'" required>
                   <mat-icon matSuffix (click)="hide = !hide">
                     {{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
                   <mat-error *ngIf="authForm.get('password').hasError('required')">
-                    Password is required
+                    יש לרשום את הסיסמה
                   </mat-error>
                 </mat-form-field>
               </div>
             </div>
-            <div class="row">
-              <div class="col-xl-12col-lg-12 col-md-12 col-sm-12 mb-2">
-                <mat-form-field class="example-full-width" appearance="outline">
-                  <mat-label>Confirm Password</mat-label>
-                  <input matInput formControlName="cpassword" [type]="chide ? 'password' : 'text'" required>
-                  <mat-icon matSuffix (click)="chide = !chide">
-                    {{chide ? 'visibility_off' : 'visibility'}}</mat-icon>
-                  <mat-error *ngIf="authForm.get('cpassword').hasError('required')">
-                    Confirm Password is required
-                  </mat-error>
-                </mat-form-field>
-              </div>
-            </div>
-            <div class="flex-sb-m w-full  p-b-20">
-              <div>
-                <span>Already Registered? <a routerLink="/authentication/signin">
-                    Login
+
+
+            <div class="flex-sb-m w-full  p-b-20" class="toleft">
+              <div >
+                <span>כבר רשום? <a routerLink="/authentication/signin">
+                  התחברות
                   </a></span>
               </div>
             </div>
             <div class="container-auth-form-btn">
-              <button mat-flat-button color="primary" class="auth-form-btn" [disabled]="!authForm.valid " type="submit">
-                Register
+              <button (click)="register()" mat-flat-button color="primary" class="auth-form-btn" [disabled]="authForm.valid " type="submit">
+                להירשם
               </button>
             </div>
           </form>
-          <h6 class="social-login-title">OR</h6>
-          <ul class="list-unstyled social-icon mb-0 mt-3">
-            <li class="list-inline-item"><a href="javascript:void(0)" class="rounded">
-                <i class="fab fa-google"></i>
-              </a></li>
-            <li class="list-inline-item"><a href="javascript:void(0)" class="rounded flex-c-m">
-                <i class="fab fa-facebook-f"></i>
-              </a></li>
-            <li class="list-inline-item"><a href="javascript:void(0)" class="rounded">
-                <i class="fab fa-twitter"></i>
-              </a></li>
-            <li class="list-inline-item"><a href="javascript:void(0)" class="rounded">
-                <i class="fab fa-linkedin-in"></i>
-              </a></li>
-          </ul>
+       
         </div>
       </div>
     </div>
