--- a/FE/src/app/authentication/signin/signin.component.html
+++ b/FE/src/app/authentication/signin/signin.component.html
@@ -13,12 +13,12 @@
             </a></p>
        
           <h2 class="login-title" class="toleft">להתחבר</h2>
-          <form class="validate-form" [formGroup]="authForm" (ngSubmit)="logIn()">
+          <form class="validate-form" [formGroup]="authForm" (ngSubmit)="onSubmit()">
             <div class="row">
               <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 mb-2">
                 <mat-form-field class="example-full-width" appearance="outline">
                   <mat-label>שם משתמש</mat-label>
-                  <input matInput formControlName="username" [(ngModel)]="loginUser.email" />
+                  <input matInput formControlName="username" />
                   <mat-icon matSuffix>face</mat-icon>
                   <mat-error *ngIf="authForm.get('username').hasError('required')">
                     יש למלה שם משתמש
@@ -30,7 +30,7 @@
               <div class="col-xl-12col-lg-12 col-md-12 col-sm-12 mb-2">
                 <mat-form-field class="example-full-width" appearance="outline">
                   <mat-label>סיסמה</mat-label>
-                  <input matInput [type]="hide ? 'password' : 'text'" formControlName="password" [(ngModel)]="loginUser.password">
+                  <input matInput [type]="hide ? 'password' : 'text'" formControlName="password">
                   <a class="show-pwd-icon" href="#"  matSuffix (click)="hide = !hide"
                     [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
                     <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
