--- a/FE/src/app/admin/all-technician/all-technician.component.html
+++ b/FE/src/app/admin/all-technician/all-technician.component.html
@@ -5,6 +5,11 @@
             <div class="row">
               <div class="col-8">
                 <ul class="header-buttons-left ml-0">
+                  <li class="dropdown m-l-20">
+                    <label for="search-input"><i class="material-icons search-icon">search</i></label>
+                    <input  placeholder="Search" autocomplete="off" type="text" (keyup)="applyFilter($event)" class="browser-default search-field"
+                      aria-label="Search box">
+                  </li>
                   <li class="dropdown">
                     <h2>
                       <strong>כל התכנאים</strong></h2>
@@ -32,6 +37,8 @@
                   </li>
                 </ul>
               </div>
+            
+           
             </div>
           </div>
                 
