--- a/FE/src/app/screen-cont/screen-cont.component.html
+++ b/FE/src/app/screen-cont/screen-cont.component.html
@@ -1,15 +1,15 @@
 <section class="content">
     <div class="content-block">     
-      <div class="block-header" *ngFor="let breadscrum of breadscrums">
+      <div class="block-header" *ngFor="let breadscrum of breadscrums" >
         <!-- breadcrumb -->
-        <app-breadcrumb [title]="breadscrum.title" [items]="breadscrum.items" [active_item]="breadscrum.active">
+        <app-breadcrumb [title]="breadscrum.title" [items]="breadscrum.items" [active_item]="breadscrum.active" >
         </app-breadcrumb>
       </div>
-      <div class="row clearfix">
-        <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
+      <div class="row clearfix" >
+        <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12" >
           <div class="card">
-            <div class="header">
-              <h2>{{title}}</h2>
+            <div class="header" style="margin-left: 1000px;">
+              <h1>{{title}}</h1>
                 
             </div>
             <div class="body">
