--- a/FE/src/app/customer/customer-details/customer-details.component.html
+++ b/FE/src/app/customer/customer-details/customer-details.component.html
@@ -1,1 +1,27 @@
-<p>customer-details works!</p>
+<section class="content">
+  <div class="content-block">
+    <div class="block-header" *ngFor="let breadscrum of breadscrums">
+      <!-- breadcrumb -->
+      <app-breadcrumb [title]="breadscrum.title" [items]="breadscrum.items" [active_item]="breadscrum.active">
+      </app-breadcrumb>
+    </div>
+    <div class="row">
+      <mat-card class="example-card">
+        <mat-card-subtitle>Dog Breed</mat-card-subtitle>
+        <mat-card-title>Shiba Inu</mat-card-title>
+        <mat-card-content>
+          <p>This card has divider and indeterminate progress as footer</p>
+          <p>Karem</p>
+        </mat-card-content>
+        <mat-divider inset></mat-divider>
+        <mat-card-actions>
+          <button mat-button>Edit</button>
+        </mat-card-actions>
+        <mat-card-footer>
+          <!-- <mat-progress-bar mode="indeterminate"></mat-progress-bar> -->
+        </mat-card-footer>
+      </mat-card>
+
+  </div>
+</div>
+</section>
