--- a/FE/src/app/admin/all-technician/all-technician.component.html
+++ b/FE/src/app/admin/all-technician/all-technician.component.html
@@ -96,7 +96,7 @@
 
  <!-- actions -->
  <ng-container matColumnDef="action">
-    <mat-header-cell *matHeaderCellDef>Actions
+    <mat-header-cell *matHeaderCellDef>פעלות
     </mat-header-cell>
     <mat-cell *matCellDef="let row;">
       <button mat-icon-button color="primary" 
