--- a/FE/src/app/customer/request-tech/request-tech.component.html
+++ b/FE/src/app/customer/request-tech/request-tech.component.html
@@ -6,7 +6,87 @@
         </app-breadcrumb>
       </div>
       <div class="row">
-          Need Form here 
+        <div>
+          <h4 style="margin-left:10px"> טופס בקשת תיקון מחשב</h4>
+        </div>
+        <form #formInfo="ngForm" class="form m-4"  [formGroup]="ReqForm">
+          <div class="col-md-12 col-sm-12">
+            <h6 > פרטי לקוח</h6>
+          <mat-form-field appearance="fill">
+            <mat-label>שם פרטי</mat-label>
+            <input matInput placeholder="pat@example.com" [formControl]="ReqForm.get('email')" required>
+            <!-- <mat-error *ngIf="email.invalid">{{getErrorMessage()}}</mat-error> -->
+          </mat-form-field>
+          <mat-form-field style="margin:10px; width:250px" appearance="fill">
+            <mat-label>מייל</mat-label>
+            <input matInput placeholder="pat@example.com" [formControl]="ReqForm.get('email')" required>
+            <!-- <mat-error *ngIf="email.invalid">{{getErrorMessage()}}</mat-error> -->
+          </mat-form-field>
+          <mat-form-field style="margin:10px; width:250px" appearance="fill">
+            <mat-label>טלפון</mat-label>
+            <input matInput placeholder="pat@example.com" [formControl]="ReqForm.get('email')" required>
+            <!-- <mat-error *ngIf="email.invalid">{{getErrorMessage()}}</mat-error> -->
+          </mat-form-field>
+          </div>
+          <div class="col-md-12 col-sm-12">
+            <h6 >  סוג מכשיר</h6>
+            <mat-form-field style="margin:10px; width:250px" appearance="fill">
+              <mat-label>דגם מחשב</mat-label>
+              <input matInput placeholder="HP/Lenovo..etc" [formControl]="ReqForm.get('email')" required>
+              <!-- <mat-error *ngIf="email.invalid">{{getErrorMessage()}}</mat-error> -->
+            </mat-form-field>
+            <mat-form-field appearance="fill">
+              
+              <mat-label>Select</mat-label>
+              <mat-select>
+                <mat-option value="one">מחשב נייד</mat-option>
+                <mat-option value="two">מחשב נייח</mat-option>
+                <mat-option value="two">טאבלט
+                </mat-option>
+              </mat-select>
+            </mat-form-field>
+          </div>
+          <div class="col-md-12 col-sm-12">
+            <h6> פירוט תקלה</h6>
+            <mat-form-field style="margin:10px;width:500px" appearance="fill">
+              <mat-label>Textarea</mat-label>
+              <textarea matInput></textarea>
+            </mat-form-field>
+          </div>
+          <div class="col-md-12 col-sm-12">
+            <h6>מיקום תיקון</h6>
+            <mat-form-field appearance="fill">
+            <mat-label>תבחר מיקום</mat-label>
+            <mat-select>
+              <mat-option value="one">תיקון בבית</mat-option>
+              <mat-option value="two">תיקון במעבדה</mat-option>
+            </mat-select>
+          </mat-form-field>
+          </div>
+          <div class="col-md-12 col-sm-12">
+            <h6>תנאים והבהרות</h6>
+           <h4 class="title">
+              אין לשלוח אביזרים נלווים אשר לא הכרחיים למטרת הבדיקה כגון:מטען,תיק,כרטיס זיכרון,נרתקים וכסיויים
+          </h4>
+  <ul  style="list-style:square!important;direction:rtl;font-family:Calibri;font-size:15px;">
+      <li>אין המעבדה אחרית על מידע הנמצא במכשיר.באחריות הלקוח לגבות כל מידע הנמצא בו</li>
+  <li>כל מוצר אשר יישלח למעבדה ייארז באריזה על מנת להגן על המוצר בזמן השינוע-קרטון|פצפץ|ספוג וכל</li>
+  <li dir="rtl">
+      מוצר שסיים תהליך "יאסף על ידי הלקוח לא יאוחר מ 90 ימי עסקים אלא אם סוכם אחרת"
+  </li>
+      <li>
+          מוצר שלא ייאסף תוך 90 יום.איו מעבדה אינה אינה אחראית על החזרתו ללקוח או על המוצר עצמו
+      </li>
+      <li>
+          חשוב לזכור כי טופס זה נועד לתת מענה מקסימאלי עבורך ולכן יש למלא טופס זה במלואו ולצרפו ולמוצר
+      </li>
+  </ul>
+          </div>
+          <button mat-raised-button style="margin:10px;" color="primary">שלח</button>
+          <button mat-raised-button color="warn">ביטול</button>
+
+        </form>
+
   
     </div>
   </div>
