--- a/FE/src/app/customer/customer-details/customer-details.component.html
+++ b/FE/src/app/customer/customer-details/customer-details.component.html
@@ -9,10 +9,10 @@
       <mat-card class="example-card">
         <!-- <div mat-card-avatar class="example-header-image"></div> -->
         <mat-card-subtitle>{{customer.email}}</mat-card-subtitle>
-        <mat-card-title>{{customer.name}}</mat-card-title>
+        <mat-card-title>{{customer.username}</mat-card-title>
         <mat-card-content>
-          <p>Address: {{customer.address}}</p>
-          <p>Phone: {{customer.phone}}</p>
+          <p>Address: {{customer.userAddress}}</p>
+          <p>Phone: {{customer.userPhone}}</p>
         </mat-card-content>
         <mat-card-actions>
           <button mat-button><mat-icon aria-label="Edit">edit
