--- a/FE/src/app/authentication/signin/signin.component.html
+++ b/FE/src/app/authentication/signin/signin.component.html
@@ -18,7 +18,7 @@
               <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 mb-2">
                 <mat-form-field class="example-full-width" appearance="outline">
                   <mat-label>שם משתמש</mat-label>
-                  <input matInput formControlName="username" />
+                  <input matInput formControlName="username" [(ngModel)]="loginUser.email"/>
                   <mat-icon matSuffix>face</mat-icon>
                   <mat-error *ngIf="authForm.get('username').hasError('required')">
                     יש למלה שם משתמש
@@ -30,7 +30,7 @@
               <div class="col-xl-12col-lg-12 col-md-12 col-sm-12 mb-2">
                 <mat-form-field class="example-full-width" appearance="outline">
                   <mat-label>סיסמה</mat-label>
-                  <input matInput [type]="hide ? 'password' : 'text'" formControlName="password">
+                  <input matInput [type]="hide ? 'password' : 'text'" formControlName="password" [(ngModel)]="loginUser.password">
                   <a class="show-pwd-icon" href="#"  matSuffix (click)="hide = !hide"
                     [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
                     <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
@@ -55,7 +55,7 @@
             <div class="container-auth-form-btn">
               <div style="text-align:center">
                 <button mat-raised-button color="primary" [class.auth-spinner]="loading" [disabled]="loading"
-                  class="auth-form-btn" [disabled]="!authForm.valid " type="submit">התחברות</button>
+                  class="auth-form-btn" [disabled]="!authForm.valid" type="submit">התחברות</button>
               </div>
             </div>
           </form>
