Updaing Login with a better way + changing the way to see profile + getting the details of customer

--- a/FE/src/app/customer/customer-details/customer-details.component.html
+++ b/FE/src/app/customer/customer-details/customer-details.component.html
@@ -1,10 +1,10 @@
 
-<app-screen-cont [title]="'לצרף טכנאי ל פניות'" [breadscrums]="breadscrums" >
+<app-screen-cont [title]="'פרופיל'" [breadscrums]="breadscrums" >
 
   <mat-card class="example-card">
     <!-- <div mat-card-avatar class="example-header-image"></div> -->
     <mat-card-subtitle>{{customer.email}}</mat-card-subtitle>
-    <mat-card-title>{{customer.username}</mat-card-title>
+    <mat-card-title>{{customer.userName}}</mat-card-title>
     <mat-card-content>
       <p>Address: {{customer.userAddress}}</p>
       <p>Phone: {{customer.userPhone}}</p>
