--- a/FE/src/app/admin/add-technician/add-technician.component.html
+++ b/FE/src/app/admin/add-technician/add-technician.component.html
@@ -39,7 +39,9 @@
            
             <mat-form-field style="margin:10px; width:250px" appearance="fill">
               <mat-label>סיסמה</mat-label>
-              <input matInput [(ngModel)]="newtechnician.userPassword" [formControl]="TechnicianForm.get('password')"   required>
+              <input matInput [type]="hide ? 'password' : 'text'" [(ngModel)]="newtechnician.userPassword" [formControl]="TechnicianForm.get('password')"   required>
+              <mat-icon matSuffix (click)="hide = !hide">
+                {{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
             </mat-form-field>
 
             <mat-form-field style="margin:10px; width:250px" appearance="fill" >
