--- a/FE/src/app/admin/update-technician/update-technician.component.html
+++ b/FE/src/app/admin/update-technician/update-technician.component.html
@@ -38,7 +38,9 @@
         <div class="col-md-12 col-sm-12" >
           <mat-form-field style="margin:10px; width:250px" appearance="fill">
             <mat-label>סיסמה</mat-label>
-            <input matInput [(ngModel)]="updateTechnician.userPassword" [formControl]="TechnicianForm.get('password')"   required>
+            <input matInput [type]="hide ? 'password' : 'text'" [(ngModel)]="updateTechnician.userPassword" [formControl]="TechnicianForm.get('password')"   required>
+            <mat-icon matSuffix (click)="hide = !hide">
+              {{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
           </mat-form-field>
 
           <mat-form-field style="margin:10px; width:250px" appearance="fill" >
