--- a/FE/src/app/customer/request-tech/request-tech.component.html
+++ b/FE/src/app/customer/request-tech/request-tech.component.html
@@ -5,17 +5,17 @@
             <h6 > פרטי לקוח</h6>
           <mat-form-field appearance="fill">
             <mat-label>שם פרטי</mat-label>
-            <input matInput placeholder="שם פרטי" [(ngModel)]="requestCustomer.CustomerName" [formControl]="ReqForm.get('CustomerName')" required>
+            <input matInput placeholder="שם פרטי" [(ngModel)]="Customer.userName"  [formControl]="ReqForm.get('CustomerName')" required>
             <!-- <mat-error *ngIf="email.invalid">{{getErrorMessage()}}</mat-error> -->
           </mat-form-field>
           <mat-form-field style="margin:10px; width:250px" appearance="fill">
             <mat-label>מייל</mat-label>
-            <input matInput placeholder="pat@example.com" [(ngModel)]="requestCustomer.email" [formControl]="ReqForm.get('email')" required>
+            <input matInput placeholder="pat@example.com" [(ngModel)]="Customer.email"  [formControl]="ReqForm.get('email')" required>
             <!-- <mat-error *ngIf="email.invalid">{{getErrorMessage()}}</mat-error> -->
           </mat-form-field>
           <mat-form-field style="margin:10px; width:250px" appearance="fill">
             <mat-label>טלפון</mat-label>
-            <input matInput placeholder="pat@example.com" [(ngModel)]="requestCustomer.phone" [formControl]="ReqForm.get('phone')" required>
+            <input matInput placeholder="pat@example.com" [(ngModel)]="Customer.userPhone"   [formControl]="ReqForm.get('phone')" required>
             <!-- <mat-error *ngIf="email.invalid">{{getErrorMessage()}}</mat-error> -->
           </mat-form-field>
           </div>
