Component Technician selector

--- a/FE/src/app/admin/attach-technician-to-requests/attach-technician-to-requests.component.html
+++ b/FE/src/app/admin/attach-technician-to-requests/attach-technician-to-requests.component.html
@@ -1,5 +1,5 @@
 <app-screen-cont [title]="'לצרף טכנאי ל פניות'" [breadscrums]="breadscrums" >
 
-
+<app-technicians-selector></app-technicians-selector>
 </app-screen-cont>
 
