updating the values of options

--- a/FE/src/app/customer/request-tech/request-tech.component.html
+++ b/FE/src/app/customer/request-tech/request-tech.component.html
@@ -30,9 +30,9 @@
               
               <mat-label>Select</mat-label>
               <mat-select [(ngModel)]="requestCustomer.deviceType" [formControl]="ReqForm.get('deviceType')">
-                <mat-option value="one">מחשב נייד</mat-option>
-                <mat-option value="two">מחשב נייח</mat-option>
-                <mat-option value="three">טאבלט
+                <mat-option value="מחשב נייד">מחשב נייד</mat-option>
+                <mat-option value="מחשב נייח">מחשב נייח</mat-option>
+                <mat-option value="טאבלט">טאבלט
                 </mat-option>
               </mat-select>
             </mat-form-field>
