isComplete in answer technician (not working)

--- a/FE/src/app/technician/answer-technician/answer-technician.component.html
+++ b/FE/src/app/technician/answer-technician/answer-technician.component.html
@@ -62,7 +62,7 @@
           <mat-form-field appearance="fill">
             
             <mat-label>האם לסגור הפניה</mat-label>
-            <mat-select [(ngModel)]="requestCustomer.isComplete" style="color:white;" [formControl]="ReqForm.get('isComplete')">
+            <mat-select [(ngModel)]="answerTechnician.isComplete" style="color:white;" [formControl]="ReqForm.get('isComplete')">
               <mat-option value="true">כן</mat-option>
               <mat-option value="false">לה</mat-option>
             </mat-select>
