--- a/FE/src/app/admin/attach-technician-to-requests/attach-technician-to-requests.component.html
+++ b/FE/src/app/admin/attach-technician-to-requests/attach-technician-to-requests.component.html
@@ -20,7 +20,7 @@
                     <div class="container"  (click)="selectRequest(Requset.id)" [value]=requsetCustomer.id *ngFor="let Requset of requsetCustomer">                          
                       <div class="drop-card" >                        
                           <span class="table-img msg-user">  </span>                    
-                        <span class="cardtitle noselect"> {{Requset.deviceType}}-{{Requset.id}}-{{Requset.CustomerName}}</span></div>    
+                        <span class="cardtitle noselect"> {{Requset.deviceType}}-{{Requset.id}}-{{Requset.customerName}}</span></div>    
                     </div>            
                   </div> 
                 </div>
@@ -49,7 +49,7 @@
                     <div class="container"  *ngFor="let Requsets of requestsLinked">
                       <div class="drop-card" >                        
                           <span class="table-img msg-user">  </span>                    
-                        <span class="cardtitle noselect"> {{Requsets.deviceType}}-{{Requsets.id}}-{{Requsets.CustomerName}}</span></div>    
+                        <span class="cardtitle noselect"> {{Requsets.deviceType}}-{{Requsets.id}}-{{Requsets.customerName}}</span></div>    
                     </div>
                   </div>
                 </div>
