--- a/FE/src/app/technician/answer-technician/answer-technician.component.html
+++ b/FE/src/app/technician/answer-technician/answer-technician.component.html
@@ -5,7 +5,7 @@
           <h6 > פרטי לקוח</h6>
         <mat-form-field appearance="fill">
           <mat-label>שם פרטי</mat-label>
-          <input matInput placeholder="שם פרטי"  style="color:white;"[(ngModel)]="requestCustomer.CustomerName"  [formControl]="ReqForm.get('CustomerName')" required>
+          <input matInput placeholder="שם פרטי"  style="color:white;"[(ngModel)]="requestCustomer.customerName"  [formControl]="ReqForm.get('CustomerName')" required>
         </mat-form-field>
         <mat-form-field style="margin:10px; width:250px" appearance="fill">
           <mat-label>מייל</mat-label>
