--- a/FE/src/app/technician/my-requests/my-requests.component.html
+++ b/FE/src/app/technician/my-requests/my-requests.component.html
@@ -46,7 +46,7 @@
            <ng-container matColumnDef="CustomerName">
              <mat-header-cell *matHeaderCellDef mat-sort-header>שם
              </mat-header-cell>
-             <mat-cell *matCellDef="let row"> {{row.CustomerName}}
+             <mat-cell *matCellDef="let row"> {{row.customerName}}
              </mat-cell>
            </ng-container>
            <!-- phone  Column -->
