--- a/FE/src/app/technician/my-requests/my-requests.component.html
+++ b/FE/src/app/technician/my-requests/my-requests.component.html
@@ -40,7 +40,7 @@
            <ng-container matColumnDef="isComplete">
             <mat-header-cell *matHeaderCellDef mat-sort-header>פניה
             </mat-header-cell>
-            <mat-cell *matCellDef="let row" >{{row.isComplete ? 'סגורה':'פתוחה'}}</mat-cell>
+            <mat-cell *matCellDef="let row" >{{row.iscomplete ? 'סגורה':'פתוחה'}}</mat-cell>
           </ng-container>
            <!-- CustomerName Column -->
            <ng-container matColumnDef="CustomerName">
