update repair type in request-tech

--- a/FE/src/app/customer/request-tech/request-tech.component.html
+++ b/FE/src/app/customer/request-tech/request-tech.component.html
@@ -49,8 +49,8 @@
             <mat-form-field appearance="fill">
             <mat-label>תבחר מיקום</mat-label>
             <mat-select [(ngModel)]="requestCustomer.repairType" [formControl]="ReqForm.get('repairType')">
-              <mat-option value="Onsite">תיקון בבית</mat-option>
-              <mat-option value="Offsite">תיקון במעבדה</mat-option>
+              <mat-option value="תיקון בבית">תיקון בבית</mat-option>
+              <mat-option value="תיקון במעבדה">תיקון במעבדה</mat-option>
             </mat-select>
           </mat-form-field>
           </div>
