--- a/FE/src/app/admin/about-technician/about-technician.component.html
+++ b/FE/src/app/admin/about-technician/about-technician.component.html
@@ -95,6 +95,13 @@
             <mat-cell *matCellDef="let row">
              {{row.problemDescription}}</mat-cell>
           </ng-container>
+           <!-- date Column -->
+           <ng-container matColumnDef="date">
+            <mat-header-cell *matHeaderCellDef mat-sort-header>תאריך
+            </mat-header-cell>
+            <mat-cell *matCellDef="let row">
+             {{row.date}}</mat-cell>
+          </ng-container>
 
           <!-- id Column -->
           <ng-container matColumnDef="id">
@@ -109,7 +116,7 @@
             <mat-header-cell *matHeaderCellDef mat-sort-header>תשובה מעבדה
             </mat-header-cell>
             <mat-cell *matCellDef="let row">
-             {{row.Answerdate}}</mat-cell>
+             {{row.answerdate}}</mat-cell>
           </ng-container>
 
 
