--- a/FE/src/app/technician/my-requests/my-requests.component.html
+++ b/FE/src/app/technician/my-requests/my-requests.component.html
@@ -87,6 +87,13 @@
             <mat-cell *matCellDef="let row">
              {{row.problemDescription}}</mat-cell>
           </ng-container>
+              <!-- date Column -->
+              <ng-container matColumnDef="date">
+                <mat-header-cell *matHeaderCellDef mat-sort-header>תאריך
+                </mat-header-cell>
+                <mat-cell *matCellDef="let row">
+                 {{row.date}}</mat-cell>
+              </ng-container>
 
           <!-- id Column -->
           <ng-container matColumnDef="id">
@@ -101,7 +108,7 @@
             <mat-header-cell *matHeaderCellDef mat-sort-header>תשובה מעבדה
             </mat-header-cell>
             <mat-cell *matCellDef="let row">
-             {{answerTechnician.Answerdate}}</mat-cell>
+             {{row.answerdate}}</mat-cell>
           </ng-container>
 
            <!-- actions -->
