--- a/FE/src/app/authentication/signup/signup.component.html
+++ b/FE/src/app/authentication/signup/signup.component.html
@@ -79,6 +79,12 @@
                 </mat-form-field>
               </div>
             </div>
+       
+            <div>
+              
+                <mat-icon (click)="fileInput.click()">add_a_photo</mat-icon>
+                <input #fileInput formControlName="userImage" type="button" [(ngModel)]="newCustomer.image" (click)="onFileInput()"  style="display:none;" />
+            </div>
 
 
             <div class="flex-sb-m w-full  p-b-20" class="toleft">
